--- a/boj_2178.ipynb
+++ b/boj_2178.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import deque"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [
@@ -136,10 +145,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dy = (0, 1, 0, -1)\n",
+    "dx = (1, 0, -1, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def bfs(start_y, start_x):\n",
+    "    q = deque()\n",
+    "    q.append((start_y, start_x))\n",
+    "    \n",
+    "    while len(q):\n",
+    "        y, x = q.popleft()\n",
+    "        chk[y][x] = True\n",
+    "        for k in range(4):\n",
+    "            "
+   ]
   }
  ],
  "metadata": {
