--- a/boj_2178.ipynb
+++ b/boj_2178.ipynb
@@ -167,7 +167,10 @@
     "        y, x = q.popleft()\n",
     "        chk[y][x] = True\n",
     "        for k in range(4):\n",
-    "            "
+    "            ny = y + dy[k]\n",
+    "            nx = x + dx[k]\n",
+    "            if is_valid_coord(ny, nx) and not chk[ny][nx] and adj[ny][nx]:\n",
+    "                q.append((ny, nx))"
    ]
   }
  ],
