--- a/boj_2178.ipynb
+++ b/boj_2178.ipynb
@@ -155,14 +155,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "def bfs(start_y, start_x):\n",
     "    q = deque()\n",
     "    q.append((start_y, start_x))\n",
-    "    \n",
+    "    print(f\"The starting coordinates is {start_y, start_x}\")\n",
+    "    print()\n",
+    "       \n",
     "    while len(q):\n",
     "        y, x = q.popleft()\n",
     "        chk[y][x] = True\n",
@@ -170,7 +172,84 @@
     "            ny = y + dy[k]\n",
     "            nx = x + dx[k]\n",
     "            if is_valid_coord(ny, nx) and not chk[ny][nx] and adj[ny][nx]:\n",
-    "                q.append((ny, nx))"
+    "                q.append((ny, nx))\n",
+    "                print(f\"from {(y, x)} with {dy[k], dx[k]} == to {(ny, nx)}\")\n",
+    "                if (ny == adj[N-1]) and (nx == adj[M-1]):\n",
+    "                    break                \n",
+    "        \n",
+    "        print()        \n",
+    "        print(\"Let's go to the next moves!\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The starting coordinates is (0, 0)\n",
+      "\n",
+      "from (0, 0) with (1, 0) == to (1, 0)\n",
+      "\n",
+      "Let's go to the next moves!\n",
+      "from (1, 0) with (1, 0) == to (2, 0)\n",
+      "\n",
+      "Let's go to the next moves!\n",
+      "from (2, 0) with (1, 0) == to (3, 0)\n",
+      "\n",
+      "Let's go to the next moves!\n",
+      "from (3, 0) with (0, 1) == to (3, 1)\n",
+      "\n",
+      "Let's go to the next moves!\n",
+      "from (3, 1) with (0, 1) == to (3, 2)\n",
+      "\n",
+      "Let's go to the next moves!\n",
+      "from (3, 2) with (-1, 0) == to (2, 2)\n",
+      "\n",
+      "Let's go to the next moves!\n",
+      "from (2, 2) with (-1, 0) == to (1, 2)\n",
+      "\n",
+      "Let's go to the next moves!\n",
+      "from (1, 2) with (-1, 0) == to (0, 2)\n",
+      "\n",
+      "Let's go to the next moves!\n",
+      "from (0, 2) with (0, 1) == to (0, 3)\n",
+      "\n",
+      "Let's go to the next moves!\n",
+      "from (0, 3) with (0, 1) == to (0, 4)\n",
+      "\n",
+      "Let's go to the next moves!\n",
+      "from (0, 4) with (0, 1) == to (0, 5)\n",
+      "from (0, 4) with (1, 0) == to (1, 4)\n",
+      "\n",
+      "Let's go to the next moves!\n",
+      "\n",
+      "Let's go to the next moves!\n",
+      "from (1, 4) with (1, 0) == to (2, 4)\n",
+      "\n",
+      "Let's go to the next moves!\n",
+      "from (2, 4) with (0, 1) == to (2, 5)\n",
+      "from (2, 4) with (1, 0) == to (3, 4)\n",
+      "\n",
+      "Let's go to the next moves!\n",
+      "from (2, 5) with (1, 0) == to (3, 5)\n",
+      "\n",
+      "Let's go to the next moves!\n",
+      "from (3, 4) with (0, 1) == to (3, 5)\n",
+      "\n",
+      "Let's go to the next moves!\n",
+      "\n",
+      "Let's go to the next moves!\n",
+      "\n",
+      "Let's go to the next moves!\n"
+     ]
+    }
+   ],
+   "source": [
+    "bfs(0, 0)"
    ]
   }
  ],
