More on boj_1449.ipynb for Greedy Method

--- a/boj_1449.ipynb
+++ b/boj_1449.ipynb
@@ -241,8 +241,11 @@
     "while coord:\n",
     "    coord = [c for c in coord if c > x + L]\n",
     "    x = coord[0]\n",
-    "    ans += 1\n",
-    "    "
+    "    ans += 1    \n",
+    "    print(f\"coord : {coord}, x : {x}, ans : {ans}\")\n",
+    "    \n",
+    "print()\n",
+    "print(ans)"
    ]
   },
   {
