--- a/boj_1449.ipynb
+++ b/boj_1449.ipynb
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32me:\\BAEKJOON_072723\\boj_1449.ipynb Cell 9\u001b[0m in \u001b[0;36m<cell line: 8>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1449.ipynb#X10sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39mwhile\u001b[39;00m coord:\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1449.ipynb#X10sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     coord \u001b[39m=\u001b[39m [c \u001b[39mfor\u001b[39;00m c \u001b[39min\u001b[39;00m coord \u001b[39mif\u001b[39;00m c \u001b[39m>\u001b[39m x \u001b[39m+\u001b[39m L]\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1449.ipynb#X10sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m     x \u001b[39m=\u001b[39m coord[\u001b[39m0\u001b[39;49m]\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1449.ipynb#X10sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m     ans \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m    \n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1449.ipynb#X10sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mcoord : \u001b[39m\u001b[39m{\u001b[39;00mcoord\u001b[39m}\u001b[39;00m\u001b[39m, x : \u001b[39m\u001b[39m{\u001b[39;00mx\u001b[39m}\u001b[39;00m\u001b[39m, ans : \u001b[39m\u001b[39m{\u001b[39;00mans\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;32me:\\BAEKJOON_072723\\boj_1449.ipynb Cell 9\u001b[0m in \u001b[0;36m<cell line: 8>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1449.ipynb#X10sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mif\u001b[39;00m x \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m coord[\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]:\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1449.ipynb#X10sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m     coord \u001b[39m=\u001b[39m [c \u001b[39mfor\u001b[39;00m c \u001b[39min\u001b[39;00m coord \u001b[39mif\u001b[39;00m c \u001b[39m>\u001b[39m x \u001b[39m+\u001b[39m L]\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1449.ipynb#X10sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m     x \u001b[39m=\u001b[39m coord[\u001b[39m0\u001b[39;49m]\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1449.ipynb#X10sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m     ans \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m    \n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1449.ipynb#X10sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mcoord : \u001b[39m\u001b[39m{\u001b[39;00mcoord\u001b[39m}\u001b[39;00m\u001b[39m, x : \u001b[39m\u001b[39m{\u001b[39;00mx\u001b[39m}\u001b[39;00m\u001b[39m, ans : \u001b[39m\u001b[39m{\u001b[39;00mans\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
       "\u001b[1;31mIndexError\u001b[0m: list index out of range"
      ]
     }
@@ -258,11 +258,14 @@
     "ans = 0 # ans는 사용된 테이프의 갯수\n",
     "\n",
     "while coord:\n",
-    "    if x <= coord[-1]:\n",
-    "        coord = [c for c in coord if c > x + L]\n",
+    "    \n",
+    "    coord = [c for c in coord if c > x + L]\n",
+    "    if coord:\n",
     "        x = coord[0]\n",
-    "        ans += 1    \n",
-    "        print(f\"coord : {coord}, x : {x}, ans : {ans}\")\n",
+    "        ans += 1 \n",
+    "    else:\n",
+    "        break   \n",
+    "    print(f\"coord : {coord}, x : {x}, ans : {ans}\")\n",
     "    \n",
     "print()\n",
     "print(ans)"
