More on boj_1449.ipynb for Greedy Method

--- a/boj_1449.ipynb
+++ b/boj_1449.ipynb
@@ -227,14 +227,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "2\n",
       "coord : [100, 101], x : 100, ans : 1\n",
+      "0\n",
       "\n",
       "1\n"
      ]
@@ -249,18 +251,30 @@
     "ans = 0 # ans는 사용된 테이프의 갯수\n",
     "\n",
     "while coord:\n",
-    "    \n",
+    "    ans += 1\n",
     "    coord = [c for c in coord if c > x + L]\n",
-    "    print(len(coord))\n",
-    "    if len(coord) > 0:\n",
-    "        x = coord[0]\n",
-    "        ans += 1 \n",
-    "    else:\n",
-    "        break   \n",
+    "    x = coord[0]\n",
     "    print(f\"coord : {coord}, x : {x}, ans : {ans}\")\n",
     "    \n",
     "print()\n",
     "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N, L = map(int, input().split())\n",
+    "coord = list(map(int, input().split()))\n",
+    "coord.sort()\n",
+    "\n",
+    "x = coord[0] # x는 현재 좌표의 위치\n",
+    "ans = 0 # ans는 사용된 테이프의 갯수\n",
+    "\n",
+    "while coord:\n",
+    "    "
    ]
   },
   {
