More on boj_1449.ipynb for Greedy Method

--- a/boj_1449.ipynb
+++ b/boj_1449.ipynb
@@ -227,25 +227,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "coord : [100, 101], x : 100, ans : 1\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32me:\\BAEKJOON_072723\\boj_1449.ipynb Cell 9\u001b[0m in \u001b[0;36m<cell line: 8>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1449.ipynb#X10sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     ans \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1449.ipynb#X10sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m     coord \u001b[39m=\u001b[39m [c \u001b[39mfor\u001b[39;00m c \u001b[39min\u001b[39;00m coord \u001b[39mif\u001b[39;00m c \u001b[39m>\u001b[39m x \u001b[39m+\u001b[39m L]\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1449.ipynb#X10sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m     x \u001b[39m=\u001b[39m coord[\u001b[39m0\u001b[39;49m]\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1449.ipynb#X10sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mcoord : \u001b[39m\u001b[39m{\u001b[39;00mcoord\u001b[39m}\u001b[39;00m\u001b[39m, x : \u001b[39m\u001b[39m{\u001b[39;00mx\u001b[39m}\u001b[39;00m\u001b[39m, ans : \u001b[39m\u001b[39m{\u001b[39;00mans\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1449.ipynb#X10sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39mprint\u001b[39m()\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+      "coord : [6, 7, 8, 10, 13, 16, 1001, 1004], x : 6, ans : 1\n",
+      "coord : [10, 13, 16, 1001, 1004], x : 10, ans : 2\n",
+      "coord : [13, 16, 1001, 1004], x : 13, ans : 3\n",
+      "coord : [16, 1001, 1004], x : 16, ans : 4\n",
+      "coord : [1001, 1004], x : 1001, ans : 5\n",
+      "coord : [1004], x : 1004, ans : 6\n",
+      "\n",
+      "7\n"
      ]
     }
    ],
@@ -264,6 +260,27 @@
     "        x = coord[0]\n",
     "    else:\n",
     "        break\n",
+    "    print(f\"coord : {coord}, x : {x}, ans : {ans}\")\n",
+    "    \n",
+    "print()\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N, L = map(int, input().split())\n",
+    "coord = list(map(int, input().split()))\n",
+    "coord.sort()\n",
+    "ans = 0 # ans는 사용된 테이프의 갯수\n",
+    "\n",
+    "while coord:\n",
+    "    x = coord[0]\n",
+    "    ans += 1\n",
+    "    coord = [c for c in coord if c > x + L]\n",
     "    print(f\"coord : {coord}, x : {x}, ans : {ans}\")\n",
     "    \n",
     "print()\n",
