More on boj_1449.ipynb

--- a/boj_1449.ipynb
+++ b/boj_1449.ipynb
@@ -268,44 +268,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "N, L = map(int, input().split())\n",
-    "coord = list(map(int, input().split()))\n",
-    "coord.sort()\n",
-    "ans = 0 # ans는 사용된 테이프의 갯수\n",
-    "\n",
-    "while coord:\n",
-    "    x = coord[0]\n",
-    "    ans += 1\n",
-    "    coord = [c for c in coord if c > x + L]\n",
-    "    print(f\"coord : {coord}, x : {x}, ans : {ans}\")\n",
-    "    \n",
-    "print()\n",
-    "print(ans)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "N, L = map(int, input().split())\n",
-    "coord = list(map(int, input().split()))\n",
-    "coord.sort()\n",
-    "\n",
-    "x = coord[0] # x는 현재 좌표의 위치\n",
-    "ans = 0 # ans는 사용된 테이프의 갯수\n",
-    "\n",
-    "while coord:\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -313,48 +275,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 3, 4, 5, 6, 8]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[4, 5, 6, 8]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x = [1, 3, 4, 6, 8, 5]\n",
-    "x.sort()\n",
-    "print(x)\n",
-    "x = [c for c in x if c > 3]\n",
-    "x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[4, 5, 6, 8]\n",
-      "[5, 6, 8]\n",
-      "[6, 8]\n",
-      "[8]\n"
+      "[1, 2, 3, 4]\n",
+      "coord : [], x : 1, ans : 1\n",
+      "\n",
+      "1\n"
      ]
     }
    ],
    "source": [
-    "while x:\n",
-    "    print(x)\n",
-    "    x.pop(0)"
+    "N, L = map(int, input().split())\n",
+    "coord = list(map(int, input().split()))\n",
+    "coord.sort()\n",
+    "ans = 0 # ans는 사용된 테이프의 갯수\n",
+    "\n",
+    "while coord:\n",
+    "    print(coord)\n",
+    "    x = coord[0]\n",
+    "    ans += 1\n",
+    "    coord = [c for c in coord if c >= x + L]\n",
+    "    print(f\"coord : {coord}, x : {x}, ans : {ans}\")\n",
+    "    \n",
+    "print()\n",
+    "print(ans)"
    ]
   }
  ],
