More on boj_1449.ipynb

--- a/boj_1449.ipynb
+++ b/boj_1449.ipynb
@@ -268,17 +268,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3, 4]\n",
-      "coord : [], x : 1, ans : 1\n",
+      "[1, 2, 100, 101]\n",
+      "coord : [100, 101], x : 1, ans : 1\n",
+      "[100, 101]\n",
+      "coord : [], x : 100, ans : 2\n",
       "\n",
-      "1\n"
+      "2\n"
      ]
     }
    ],
