if not stack.pop():

--- a/boj_1449.ipynb
+++ b/boj_1449.ipynb
@@ -262,10 +262,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "exp : (, stack : ['(']\n",
+      "exp : R, stack : ['(']\n",
+      "exp : U, stack : ['(']\n",
+      "exp : (, stack : ['(', '(']\n",
+      "exp : b, stack : ['(', '(']\n",
+      "exp : (, stack : ['(', '(', '(']\n",
+      "exp : i, stack : ['(', '(', '(']\n",
+      "exp : (, stack : ['(', '(', '(', '(']\n",
+      "exp : n, stack : ['(', '(', '(', '(']\n",
+      "exp : ), stack : ['(', '(', '(']\n",
+      "exp : ), stack : ['(', '(']\n",
+      "exp : ), stack : ['(']\n"
+     ]
+    }
+   ],
+   "source": [
+    "expression = '(RU(b(i(n)))'\n",
+    "stack = []\n",
+    "\n",
+    "for exp in expression:\n",
+    "    if exp == \"(\":\n",
+    "        stack.append(exp)\n",
+    "        \n",
+    "    elif exp == \")\":\n",
+    "        if not stack.pop():\n",
+    "            print(\"False\")\n",
+    "            \n",
+    "    print(f'exp : {exp}, stack : {stack}')"
+   ]
   }
  ],
  "metadata": {
