if not stack.pop():

--- a/boj_1449.ipynb
+++ b/boj_1449.ipynb
@@ -298,6 +298,86 @@
     "            \n",
     "    print(f'exp : {exp}, stack : {stack}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "    def __init__(self, data):\n",
+    "        self.data = data\n",
+    "        self.next = None\n",
+    "\n",
+    "class Stack:\n",
+    "    def __init__(self):\n",
+    "        self.top = None\n",
+    "\n",
+    "    def push(self, data):\n",
+    "        node = Node(data)\n",
+    "        if self.top is None:\n",
+    "            self.top = node\n",
+    "        else:\n",
+    "            node.next = self.top\n",
+    "            self.top = node\n",
+    "\n",
+    "    def pop(self):\n",
+    "        if self.top is None:\n",
+    "            return None\n",
+    "        node = self.top\n",
+    "        self.top = node.next\n",
+    "        return node.data\n",
+    "\n",
+    "    def peek(self):\n",
+    "        if self.top is None:\n",
+    "            return None\n",
+    "        return self.top.data\n",
+    "\n",
+    "    def is_empty(self):\n",
+    "        return self.top is None\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    s = Stack()\n",
+    "\n",
+    "    for i in range(3):\n",
+    "        s.push(chr(ord(\"A\") + i))\n",
+    "        print(f\"Push data = {s.peek()}\")\n",
+    "    print()\n",
+    "\n",
+    "    while not s.is_empty():\n",
+    "        print(f\"Pop data = {s.pop()}\")\n",
+    "    print()\n",
+    "\n",
+    "    print(f\"Peek data = {s.peek()}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_bracket2(expression):\n",
+    "    brackets = {\")\": \"(\", \"}\": \"{\", \"]\": \"[\"}\n",
+    "    s = Stack()\n",
+    "    for exp in expression:\n",
+    "        if exp in brackets.values():\n",
+    "            s.push(exp)\n",
+    "        elif exp in brackets:\n",
+    "            pop_bracket = s.pop()\n",
+    "            if not pop_bracket or pop_bracket != brackets[e]:\n",
+    "                return  False\n",
+    "    return True if s.is_empty() else False\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
