if not stack.pop():

--- a/boj_1449.ipynb
+++ b/boj_1449.ipynb
@@ -301,9 +301,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Push data = A\n",
+      "Push data = B\n",
+      "Push data = C\n",
+      "\n",
+      "Pop data = C\n",
+      "Pop data = B\n",
+      "Pop data = A\n",
+      "\n",
+      "Peek data = None\n"
+     ]
+    }
+   ],
    "source": [
     "class Node:\n",
     "    def __init__(self, data):\n",
@@ -355,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,17 +383,27 @@
     "            s.push(exp)\n",
     "        elif exp in brackets:\n",
     "            pop_bracket = s.pop()\n",
-    "            if not pop_bracket or pop_bracket != brackets[e]:\n",
+    "            if not pop_bracket or pop_bracket != brackets[exp]:\n",
     "                return  False\n",
     "    return True if s.is_empty() else False\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(check_bracket2(\"[{a * (b + c)} - d] / e\"))"
+   ]
   }
  ],
  "metadata": {
