if not stack.pop():

--- a/boj_1449.ipynb
+++ b/boj_1449.ipynb
@@ -404,6 +404,30 @@
    "source": [
     "print(check_bracket2(\"[{a * (b + c)} - d] / e\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(check_bracket2(\"[{a * (b + c)] - d] / e\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
