--- a/boj_2512.ipynb
+++ b/boj_2512.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "120 110 140 150 "
+      "4\n",
+      "120 110 140 150 \n"
      ]
     }
    ],
@@ -22,7 +23,7 @@
     "    print(budget, end=' ')\n",
     "    \n",
     "M = int(input())   # 총예산\n",
-    "print()"
+    "print(M)"
    ]
   },
   {
