--- a/boj_2512.ipynb
+++ b/boj_2512.ipynb
@@ -2,15 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n",
-      "120 110 140 150 \n"
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: '4 120 110 140 150'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32me:\\BAEKJOON_072723\\boj_2512.ipynb Cell 1\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_2512.ipynb#W0sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m N \u001b[39m=\u001b[39m \u001b[39mint\u001b[39;49m(\u001b[39minput\u001b[39;49m())    \u001b[39m# 지방자치단체 수\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_2512.ipynb#W0sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mprint\u001b[39m(N)\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_2512.ipynb#W0sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m budgets \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(\u001b[39mmap\u001b[39m(\u001b[39mint\u001b[39m, \u001b[39minput\u001b[39m()\u001b[39m.\u001b[39msplit()))\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: '4 120 110 140 150'"
      ]
     }
    ],
@@ -21,6 +24,7 @@
     "budgets = list(map(int, input().split()))\n",
     "for budget in budgets:\n",
     "    print(budget, end=' ')\n",
+    "print()\n",
     "    \n",
     "M = int(input())   # 총예산\n",
     "print(M)"
