--- a/boj_2512.ipynb
+++ b/boj_2512.ipynb
@@ -30,10 +30,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[110, 120, 140, 150]\n"
+     ]
+    }
+   ],
+   "source": [
+    "budgets.sort()\n",
+    "print(budgets)"
+   ]
   },
   {
    "cell_type": "code",
