--- a/boj_2512.ipynb
+++ b/boj_2512.ipynb
@@ -48,10 +48,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False, False, False, False]\n"
+     ]
+    }
+   ],
+   "source": [
+    "chk = [False] * N     # 예산상한액을 배정받는지 확인하는 변수, 초기값은 False로서 배정받지 않는것으로 하고 만약 배정받아야 한다면 True로 변경한다.\n",
+    "print(chk)"
+   ]
   },
   {
    "cell_type": "code",
