--- a/boj_2512.ipynb
+++ b/boj_2512.ipynb
@@ -66,10 +66,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "520"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "budget_sum = sum(budgets)\n",
+    "max_budget = 0\n",
+    "\n",
+    "if budget_sum > M:\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
