--- a/boj_2512.ipynb
+++ b/boj_2512.ipynb
@@ -66,10 +66,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[110, 120]\n"
+     ]
+    }
+   ],
+   "source": [
+    "less_than_budget_mean = [c for c in budgets if c < budget_mean]\n",
+    "print(less_than_budget_mean)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
