More on boj_2512.ipynb

--- a/boj_2512.ipynb
+++ b/boj_2512.ipynb
@@ -66,20 +66,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[110, 120]\n"
+      "[110, 120]\n",
+      "230\n",
+      "255\n"
      ]
     }
    ],
    "source": [
     "less_than_budget_mean = [c for c in budgets if c < budget_mean]\n",
     "print(less_than_budget_mean)\n",
+    "\n",
+    "sum_of_less_than_budget_mean = sum(less_than_budget_mean)\n",
+    "print(sum_of_less_than_budget_mean)\n",
+    "\n",
+    "sum_of_allocation = M - sum_of_less_than_budget_mean\n",
+    "print(sum_of_allocation)\n",
     "\n"
    ]
   },
