--- a/boj_2512.ipynb
+++ b/boj_2512.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,8 @@
      "text": [
       "[110, 120]\n",
       "230\n",
-      "255\n"
+      "255\n",
+      "127\n"
      ]
     }
    ],
@@ -88,7 +89,9 @@
     "\n",
     "sum_of_allocation = M - sum_of_less_than_budget_mean\n",
     "print(sum_of_allocation)\n",
-    "\n"
+    "\n",
+    "allocation = sum_of_allocation // (N - len(less_than_budget_mean))\n",
+    "print(allocation)"
    ]
   },
   {
