More on boj_2512.ipynb

--- a/boj_2512.ipynb
+++ b/boj_2512.ipynb
@@ -99,6 +99,42 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "N = int(input())    # 지방자치단체 수\n",
+    "print(N)\n",
+    "\n",
+    "budgets = list(map(int, input().split()))\n",
+    "for budget in budgets:\n",
+    "    print(budget, end=' ')\n",
+    "print()\n",
+    "    \n",
+    "M = int(input())   # 총예산\n",
+    "print(M)\n",
+    "\n",
+    "budgets.sort()\n",
+    "print(budgets)\n",
+    "\n",
+    "budget_mean = sum(budgets) / len(budgets)\n",
+    "print(budget_mean)\n",
+    "\n",
+    "less_than_budget_mean = [c for c in budgets if c < budget_mean]\n",
+    "print(less_than_budget_mean)\n",
+    "\n",
+    "sum_of_less_than_budget_mean = sum(less_than_budget_mean)\n",
+    "print(sum_of_less_than_budget_mean)\n",
+    "\n",
+    "sum_of_allocation = M - sum_of_less_than_budget_mean\n",
+    "print(sum_of_allocation)\n",
+    "\n",
+    "allocation = sum_of_allocation // (N - len(less_than_budget_mean))\n",
+    "print(allocation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
