More on boj_2512.ipynb

--- a/boj_2512.ipynb
+++ b/boj_2512.ipynb
@@ -96,9 +96,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "120 110 140 150 \n",
+      "485\n",
+      "[110, 120, 140, 150]\n",
+      "130.0\n",
+      "[110, 120]\n",
+      "230\n",
+      "255\n",
+      "127\n"
+     ]
+    }
+   ],
    "source": [
     "N = int(input())    # 지방자치단체 수\n",
     "print(N)\n",
@@ -127,7 +143,7 @@
     "print(sum_of_allocation)\n",
     "\n",
     "allocation = sum_of_allocation // (N - len(less_than_budget_mean))\n",
-    "print(allocation)"
+    "print(f\"allocation : {allocation}\")"
    ]
   },
   {
