More on boj_2512.ipynb

--- a/boj_2512.ipynb
+++ b/boj_2512.ipynb
@@ -96,22 +96,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n",
-      "120 110 140 150 \n",
-      "485\n",
-      "[110, 120, 140, 150]\n",
-      "130.0\n",
-      "[110, 120]\n",
-      "230\n",
-      "255\n",
-      "127\n"
+      "5\n",
+      "70 80 30 40 100 \n",
+      "450\n",
+      "[30, 40, 70, 80, 100]\n",
+      "64.0\n",
+      "[30, 40]\n",
+      "70\n",
+      "380\n",
+      "allocation : 126\n"
      ]
     }
    ],
