--- a/dfs_bfs.ipynb
+++ b/dfs_bfs.ipynb
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -257,259 +257,194 @@
       "from (2, 2) with (-1, 0) == to (1, 2)\n",
       "\n",
       "Let's go to the next moves!\n",
-      "\n",
       "from (2, 3) with (0, 1) == to (2, 4)\n",
       "from (2, 3) with (1, 0) == to (3, 3)\n",
       "from (2, 3) with (-1, 0) == to (1, 3)\n",
       "\n",
       "Let's go to the next moves!\n",
-      "\n",
       "from (3, 2) with (0, 1) == to (3, 3)\n",
       "from (3, 2) with (1, 0) == to (4, 2)\n",
       "from (3, 2) with (0, -1) == to (3, 1)\n",
       "\n",
       "Let's go to the next moves!\n",
-      "\n",
       "from (2, 1) with (1, 0) == to (3, 1)\n",
       "from (2, 1) with (0, -1) == to (2, 0)\n",
       "from (2, 1) with (-1, 0) == to (1, 1)\n",
       "\n",
       "Let's go to the next moves!\n",
-      "\n",
       "from (1, 2) with (0, 1) == to (1, 3)\n",
       "from (1, 2) with (0, -1) == to (1, 1)\n",
       "from (1, 2) with (-1, 0) == to (0, 2)\n",
       "\n",
       "Let's go to the next moves!\n",
-      "\n",
       "from (2, 4) with (1, 0) == to (3, 4)\n",
       "from (2, 4) with (-1, 0) == to (1, 4)\n",
       "\n",
       "Let's go to the next moves!\n",
-      "\n",
       "from (3, 3) with (0, 1) == to (3, 4)\n",
       "from (3, 3) with (1, 0) == to (4, 3)\n",
       "\n",
       "Let's go to the next moves!\n",
-      "\n",
       "from (1, 3) with (0, 1) == to (1, 4)\n",
       "from (1, 3) with (-1, 0) == to (0, 3)\n",
       "\n",
       "Let's go to the next moves!\n",
-      "\n",
       "from (3, 3) with (0, 1) == to (3, 4)\n",
       "from (3, 3) with (1, 0) == to (4, 3)\n",
       "\n",
       "Let's go to the next moves!\n",
-      "\n",
       "from (4, 2) with (0, 1) == to (4, 3)\n",
       "from (4, 2) with (0, -1) == to (4, 1)\n",
       "\n",
       "Let's go to the next moves!\n",
-      "\n",
       "from (3, 1) with (1, 0) == to (4, 1)\n",
       "from (3, 1) with (0, -1) == to (3, 0)\n",
       "\n",
       "Let's go to the next moves!\n",
-      "\n",
       "from (3, 1) with (1, 0) == to (4, 1)\n",
       "from (3, 1) with (0, -1) == to (3, 0)\n",
       "\n",
       "Let's go to the next moves!\n",
-      "\n",
       "from (2, 0) with (1, 0) == to (3, 0)\n",
       "from (2, 0) with (-1, 0) == to (1, 0)\n",
       "\n",
       "Let's go to the next moves!\n",
-      "\n",
       "from (1, 1) with (0, -1) == to (1, 0)\n",
       "from (1, 1) with (-1, 0) == to (0, 1)\n",
       "\n",
       "Let's go to the next moves!\n",
-      "\n",
       "from (1, 3) with (0, 1) == to (1, 4)\n",
       "from (1, 3) with (-1, 0) == to (0, 3)\n",
       "\n",
       "Let's go to the next moves!\n",
-      "\n",
       "from (1, 1) with (0, -1) == to (1, 0)\n",
       "from (1, 1) with (-1, 0) == to (0, 1)\n",
       "\n",
       "Let's go to the next moves!\n",
-      "\n",
       "from (0, 2) with (0, 1) == to (0, 3)\n",
       "from (0, 2) with (0, -1) == to (0, 1)\n",
       "\n",
       "Let's go to the next moves!\n",
-      "\n",
       "from (3, 4) with (1, 0) == to (4, 4)\n",
       "\n",
       "Let's go to the next moves!\n",
-      "\n",
       "from (1, 4) with (-1, 0) == to (0, 4)\n",
       "\n",
       "Let's go to the next moves!\n",
-      "\n",
       "from (3, 4) with (1, 0) == to (4, 4)\n",
       "\n",
       "Let's go to the next moves!\n",
-      "\n",
       "from (4, 3) with (0, 1) == to (4, 4)\n",
       "\n",
       "Let's go to the next moves!\n",
-      "\n",
       "from (1, 4) with (-1, 0) == to (0, 4)\n",
       "\n",
       "Let's go to the next moves!\n",
-      "\n",
       "from (0, 3) with (0, 1) == to (0, 4)\n",
       "\n",
       "Let's go to the next moves!\n",
-      "\n",
       "from (3, 4) with (1, 0) == to (4, 4)\n",
       "\n",
       "Let's go to the next moves!\n",
-      "\n",
       "from (4, 3) with (0, 1) == to (4, 4)\n",
       "\n",
       "Let's go to the next moves!\n",
-      "\n",
       "from (4, 3) with (0, 1) == to (4, 4)\n",
       "\n",
       "Let's go to the next moves!\n",
-      "\n",
       "from (4, 1) with (0, -1) == to (4, 0)\n",
       "\n",
       "Let's go to the next moves!\n",
-      "\n",
       "from (4, 1) with (0, -1) == to (4, 0)\n",
       "\n",
       "Let's go to the next moves!\n",
-      "\n",
       "from (3, 0) with (1, 0) == to (4, 0)\n",
       "\n",
       "Let's go to the next moves!\n",
-      "\n",
       "from (4, 1) with (0, -1) == to (4, 0)\n",
       "\n",
       "Let's go to the next moves!\n",
-      "\n",
       "from (3, 0) with (1, 0) == to (4, 0)\n",
       "\n",
       "Let's go to the next moves!\n",
-      "\n",
       "from (3, 0) with (1, 0) == to (4, 0)\n",
       "\n",
       "Let's go to the next moves!\n",
-      "\n",
       "from (1, 0) with (-1, 0) == to (0, 0)\n",
       "\n",
       "Let's go to the next moves!\n",
-      "\n",
       "from (1, 0) with (-1, 0) == to (0, 0)\n",
       "\n",
       "Let's go to the next moves!\n",
+      "from (0, 1) with (0, -1) == to (0, 0)\n",
       "\n",
+      "Let's go to the next moves!\n",
+      "from (1, 4) with (-1, 0) == to (0, 4)\n",
+      "\n",
+      "Let's go to the next moves!\n",
+      "from (0, 3) with (0, 1) == to (0, 4)\n",
+      "\n",
+      "Let's go to the next moves!\n",
+      "from (1, 0) with (-1, 0) == to (0, 0)\n",
+      "\n",
+      "Let's go to the next moves!\n",
+      "from (0, 1) with (0, -1) == to (0, 0)\n",
+      "\n",
+      "Let's go to the next moves!\n",
+      "from (0, 3) with (0, 1) == to (0, 4)\n",
+      "\n",
+      "Let's go to the next moves!\n",
       "from (0, 1) with (0, -1) == to (0, 0)\n",
       "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "from (1, 4) with (-1, 0) == to (0, 4)\n",
+      "Let's go to the next moves!\n",
       "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "from (0, 3) with (0, 1) == to (0, 4)\n",
+      "Let's go to the next moves!\n",
       "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "from (1, 0) with (-1, 0) == to (0, 0)\n",
+      "Let's go to the next moves!\n",
       "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "from (0, 1) with (0, -1) == to (0, 0)\n",
+      "Let's go to the next moves!\n",
       "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "from (0, 3) with (0, 1) == to (0, 4)\n",
+      "Let's go to the next moves!\n",
       "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "from (0, 1) with (0, -1) == to (0, 0)\n",
+      "Let's go to the next moves!\n",
       "\n",
       "Let's go to the next moves!\n",
       "\n",
+      "Let's go to the next moves!\n",
       "\n",
       "Let's go to the next moves!\n",
       "\n",
+      "Let's go to the next moves!\n",
       "\n",
       "Let's go to the next moves!\n",
       "\n",
+      "Let's go to the next moves!\n",
       "\n",
       "Let's go to the next moves!\n",
       "\n",
+      "Let's go to the next moves!\n",
       "\n",
       "Let's go to the next moves!\n",
       "\n",
+      "Let's go to the next moves!\n",
       "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "\n",
       "Let's go to the next moves!\n",
       "\n",
-      "\n",
-      "Let's go to the next moves!\n",
-      "\n",
-      "\n",
-      "Let's go to the next moves!\n",
-      "\n",
-      "\n",
-      "Let's go to the next moves!\n",
-      "\n",
-      "\n",
-      "Let's go to the next moves!\n",
-      "\n",
-      "\n",
-      "Let's go to the next moves!\n",
-      "\n",
-      "\n",
-      "Let's go to the next moves!\n",
-      "\n",
-      "\n",
-      "Let's go to the next moves!\n",
-      "\n",
-      "\n",
-      "Let's go to the next moves!\n",
-      "\n",
-      "\n",
-      "Let's go to the next moves!\n",
-      "\n",
-      "\n",
-      "Let's go to the next moves!\n",
-      "\n",
-      "\n",
-      "Let's go to the next moves!\n",
-      "\n",
-      "\n",
-      "Let's go to the next moves!\n",
-      "\n",
-      "\n",
-      "Let's go to the next moves!\n",
-      "\n",
-      "\n",
-      "Let's go to the next moves!\n",
-      "\n",
-      "\n",
-      "Let's go to the next moves!\n",
-      "\n",
-      "\n",
-      "Let's go to the next moves!\n",
-      "\n",
-      "\n",
-      "Let's go to the next moves!\n",
-      "\n",
-      "\n",
-      "Let's go to the next moves!\n",
-      "\n"
+      "Let's go to the next moves!\n"
      ]
     }
    ],
