--- a/boj_10815.ipynb
+++ b/boj_10815.ipynb
@@ -5,7 +5,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "N = int(input())\n",
+    "\n",
+    "sanggeun = list(map(int, input().split()))\n",
+    "for c in sanggeun:\n",
+    "    print(c, end=' ')\n",
+    "print()\n",
+    "\n",
+    "M = int(input())\n",
+    "\n",
+    "cards = list(map(int, input().split()))\n",
+    "for c in cards:\n",
+    "    print(c, end=' ')\n",
+    "print()"
+   ]
   }
  ],
  "metadata": {
