--- a/boj_10815.ipynb
+++ b/boj_10815.ipynb
@@ -2,11 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "6 3 2 10 -10 \n",
+      "5\n",
+      "10 9 -5 2 3 4 5 -10 \n"
+     ]
+    }
+   ],
    "source": [
     "N = int(input())\n",
+    "print(N)\n",
     "\n",
     "sanggeun = list(map(int, input().split()))\n",
     "for c in sanggeun:\n",
@@ -14,6 +26,7 @@
     "print()\n",
     "\n",
     "M = int(input())\n",
+    "print(M)\n",
     "\n",
     "cards = list(map(int, input().split()))\n",
     "for c in cards:\n",
@@ -29,7 +42,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.12"
   },
   "orig_nbformat": 4
