--- a/boj_10815.ipynb
+++ b/boj_10815.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -54,14 +54,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lo : -10, hi : 10, mid : 3\n"
+     ]
+    }
+   ],
    "source": [
-    "lo = N[0]\n",
-    "hi = N[-1]\n",
-    "mid = (len(N) + 1) // 2 if len(N) % 2 else len(N) // 2\n",
-    "\n"
+    "lo = sanggeun[0]\n",
+    "hi = sanggeun[-1]\n",
+    "mid = (len(sanggeun) + 1) // 2 if len(sanggeun) % 2 else len(sanggeun) // 2\n",
+    "\n",
+    "print(f\"lo : {lo},  hi : {hi},  mid : {mid}\")"
    ]
   },
   {
