--- a/boj_10815.ipynb
+++ b/boj_10815.ipynb
@@ -78,7 +78,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x = [-10, 1, 2, 3, 6, 10]\n",
+    "\n",
+    "lo = x[0]\n",
+    "hi = x[-1]\n",
+    "mid = (len(x) + 1) // 2 if len(x) % 2 else len(x) // 2\n",
+    "\n",
+    "print(f\"lo : {lo},  hi : {hi},  mid : {mid}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for c in cards:\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
