--- a/boj_10815.ipynb
+++ b/boj_10815.ipynb
@@ -75,15 +75,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lo : -10,  hi : 10,  mid : 4\n"
+     ]
+    }
+   ],
    "source": [
-    "x = [-10, 1, 2, 3, 6, 10]\n",
+    "x = [-10, -3, 1, 2, 3, 6, 10]\n",
     "\n",
     "lo = x[0]\n",
     "hi = x[-1]\n",
-    "mid = (len(x) + 1) // 2 if len(x) % 2 else len(x) // 2\n",
+    "mid = x[len(x) + 1] // 2 if len(x) % 2 else x[len(x)] // 2\n",
     "\n",
     "print(f\"lo : {lo},  hi : {hi},  mid : {mid}\")"
    ]
