--- a/boj_10815.ipynb
+++ b/boj_10815.ipynb
@@ -68,34 +68,7 @@
    "source": [
     "lo = sanggeun[0]\n",
     "hi = sanggeun[-1]\n",
-    "mid = (len(sanggeun) + 1) // 2 if len(sanggeun) % 2 else len(sanggeun) // 2\n",
-    "\n",
-    "print(f\"lo : {lo},  hi : {hi},  mid : {mid}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32me:\\BAEKJOON_072723\\boj_10815.ipynb Cell 4\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10815.ipynb#W6sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m lo \u001b[39m=\u001b[39m x[\u001b[39m0\u001b[39m]\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10815.ipynb#W6sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m hi \u001b[39m=\u001b[39m x[\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10815.ipynb#W6sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m mid \u001b[39m=\u001b[39m x[\u001b[39mlen\u001b[39;49m(x) \u001b[39m+\u001b[39;49m \u001b[39m1\u001b[39;49m] \u001b[39m/\u001b[39m\u001b[39m/\u001b[39m \u001b[39m2\u001b[39m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(x) \u001b[39m%\u001b[39m \u001b[39m2\u001b[39m \u001b[39melse\u001b[39;00m x[\u001b[39mlen\u001b[39m(x)] \u001b[39m/\u001b[39m\u001b[39m/\u001b[39m \u001b[39m2\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_10815.ipynb#W6sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mlo : \u001b[39m\u001b[39m{\u001b[39;00mlo\u001b[39m}\u001b[39;00m\u001b[39m,  hi : \u001b[39m\u001b[39m{\u001b[39;00mhi\u001b[39m}\u001b[39;00m\u001b[39m,  mid : \u001b[39m\u001b[39m{\u001b[39;00mmid\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
-     ]
-    }
-   ],
-   "source": [
-    "x = [-10, -3, 1, 2, 3, 6, 10]\n",
-    "\n",
-    "lo = x[0]\n",
-    "hi = x[-1]\n",
-    "mid = x[(len(x)+1) // 2] if len(x) % 2 else x[len(x) // 2]\n",
+    "mid = sanggeun[(len(sanggeun)+1) // 2] if not(len(sanggeun) % 2) else sanggeun[len(sanggeun) // 2]\n",
     "\n",
     "print(f\"lo : {lo},  hi : {hi},  mid : {mid}\")"
    ]
