--- a/boj_10815.ipynb
+++ b/boj_10815.ipynb
@@ -79,8 +79,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def go_to_lower(x, mid):\n",
+    "    \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 9, -5, 2, 3, 4, 5, -10]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "for c in cards:\n",
-    "    "
+    "    if c < mid:\n",
+    "        sanggeun = [x for x in sanggeun if x < mid]\n",
+    "    else:\n",
+    "        sanggeun = []        "
    ]
   },
   {
