--- a/boj_10815.ipynb
+++ b/boj_10815.ipynb
@@ -102,10 +102,12 @@
    ],
    "source": [
     "for c in cards:\n",
+    "    new_sanggeun = sanggeun\n",
     "    if c < mid:\n",
-    "        sanggeun = [x for x in sanggeun if x < mid]\n",
+    "        new_sanggeun = [x for x in new_sanggeun if x < mid]\n",
+    "        hi = mid\n",
     "    else:\n",
-    "        sanggeun = []        "
+    "        new_sanggeun = [x for x in new_sanggeun if x >= mid]        "
    ]
   },
   {
@@ -113,7 +115,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for c in cards:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = [3, -2, 4, 8, -5]\n",
+    "x.index(-2)"
+   ]
   },
   {
    "cell_type": "code",
